--- a/css/inicio.css
+++ b/css/inicio.css
@@ -10,8 +10,9 @@ header{
     flex-direction: row;
 }
 body{
-
+    background-size:auto;
     background-color: #EFCFE3;
+    
 
 }
 .container1{
@@ -117,14 +118,18 @@ aside .texto a {
     flex-grow: 1; 
     text-align: center;
 }
-
+.rodadero {
+    opacity: 0; 
+}
 .rodadero2 {
     width: 40px;
     height: 20px;
-    background: #7c7b777d;
+    background: #EA9AB2;
     border-radius: 20px;
     margin-right: 10px; /* interruptor y texto */
     position: relative;
+    
+    
 }
 
 .rodadero2:before {
@@ -134,7 +139,7 @@ aside .texto a {
     left: 2px;
     width: 16px;
     height: 16px;
-    background: white;
+    background: #EFCFE3;
     border-radius: 50%;
     transition: 0.2s;
 }
@@ -146,13 +151,12 @@ aside .texto a {
 
 .principal {
     display: flex;
-    flex-direction: row; 
+    flex-direction: row;
 }
 
 aside {
     flex: 1;
-    background-color: #EFCFE3; /* Asigna una proporción del espacio disponible al aside */
-    /* Tus estilos existentes para el aside */
+    background-color: #EFCFE3;
 }
 
 .contenidotodo {
@@ -163,6 +167,8 @@ aside {
     margin: 30px auto; 
     background-color: #EA9AB2;
     max-width: 90%; 
+    
+    margin-top: 20px;
 }
 
 
@@ -174,8 +180,8 @@ aside {
 }
 .contenidotodo h2 {
     font-family: "Signika Negative", sans-serif;
-    font-size: 60px; /* Ajusta el tamaño de la fuente según sea necesario */
-    text-align: left; /* Alinea el texto a la derecha */
+    font-size: 60px; 
+    text-align: left; 
     font-weight: bold;
     color: #EFCFE3; /* Color del texto */
     text-shadow: -3px -3px 0 rgb(0, 0, 0)
@@ -185,15 +191,13 @@ aside {
 .imagen {
     display: flex;
     align-items: right; 
-    gap: 70px; 
+    gap: 70px;
 
 }
 .texto3 {
     text-align: center;
     flex: 1;
 }
-
-
 
 .imagen-vanessa {
     order: 2;
@@ -202,9 +206,13 @@ aside {
 }
 
 
+
+
+
 .linea {
     border-top: 8px dashed #000; 
     width: 100%;
     margin-top: 20px; 
     margin-bottom: 20px;
 }
+
