--- a/css/pantallacarga.css
+++ b/css/pantallacarga.css
@@ -1,6 +1,7 @@
 body{
-    background-color: #EA9AB2;
     font-family: sans-serif;
+    background-image: url('../img/fondoPantalla.jpg');
+    background-size: cover;
 }
 .container{
     width: 100%;
@@ -11,7 +12,7 @@ body{
     flex-direction: column;
 }
 .text img {
-    width: 200px;
+    width: 190px;
     height: auto; 
     margin: -55px;
 }
