--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -149,6 +149,10 @@ aside .texto a {
 }
 
 
+.principal {
+    display: flex;
+    flex-direction: row;
+}
 
 aside {
     flex: 1;
@@ -168,9 +172,9 @@ aside {
 
 .contenidotodo {
     border: 1px solid #ab3f3f;
-    box-shadow: 0 2px 4px rgba(0, 38, 161, 0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     border-radius: 15px;
-    padding: 50px;
+    padding: 20px;
     background-color: #72a41c;
     text-align: center;
     width: auto; /* Ajusta esto según necesites */
@@ -178,90 +182,13 @@ aside {
     flex-direction: row; 
     justify-content: center; /* Centra los elementos en la fila */
     flex-wrap: wrap; /* Permite que los elementos se ajusten en líneas múltiples si no caben */
-    gap: 100px; 
-    height: 550px;
+    gap: 10px; /* Espacio entre los elementos de trabajo */
 }
 
-.red1 {
-    border: 2px solid #ffffff;
-    padding: 50px;
-    border-radius: 50px;
-    background-color: #00317b;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centra los elementos hijos horizontalmente */
-    justify-content: center; /* Centra los elementos hijos verticalmente (opcional si necesitas más control del espaciado vertical) */
-    margin: 10px;
-    width: 200px;
-    text-align: center; /* Asegura que el texto dentro se centre, útil para elementos de texto bloque */
-}
-.red1 h1 {
-    font-size: 14px; /* Ajusta el tamaño de fuente según sea necesario */
-    word-wrap: break-word; /* Asegura que el texto no se salga del contenedor */
-    background-color: #ddd;
-}
-
-
-.red1 img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 0; /* Minimiza el margen entre la imagen y el texto */
-
-}
-
-.red2 {
-    border: 2px solid #1800f0;
-    padding: 50px;
-    height: auto;
-    border-radius: 50px;
-    background-color: #ff0000;
-    display: flex;
-    flex-direction: column; 
-    justify-content: center; 
-    align-items: center; 
-    margin: 10px;
-    width: 200px;
-}
-
-.red2 img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 0;
-
-}
-
-
-.red1 img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 0; /* Minimiza el margen entre la imagen y el texto */
-
-}
-
-
-.red3 {
+.trabajo {
     border: 2px solid #000000;
-    padding: 50px;
-    height: auto;
+    padding: 100px;
+    height: 300px;
     border-radius: 50px;
     background-color: #9f0000;
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    align-items: center; 
-    margin: 10px;
-    width: 200px;
-}
-
-.red3 img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 0; 
-
-}
-
-.texto h1 {   
-    margin-top: 0; 
-    padding: 0;
-    word-wrap: break-word; 
 }
