--- a/carpetanoimportante/prueba.css
+++ b/carpetanoimportante/prueba.css
@@ -170,7 +170,7 @@ aside {
     border: 1px solid #ab3f3f;
     box-shadow: 0 2px 4px rgba(0, 38, 161, 0.1);
     border-radius: 15px;
-    padding: 50px;
+    padding: 20px;
     background-color: #72a41c;
     text-align: center;
     width: auto; /* Ajusta esto según necesites */
@@ -183,24 +183,18 @@ aside {
 }
 
 .red1 {
-    border: 2px solid #ffffff;
-    padding: 50px;
+    border: 2px solid #000000;
+    padding: 10px;
+    height: auto;
     border-radius: 50px;
-    background-color: #00317b;
+    background-color: #9f0000;
     display: flex;
-    flex-direction: column;
-    align-items: center; /* Centra los elementos hijos horizontalmente */
-    justify-content: center; /* Centra los elementos hijos verticalmente (opcional si necesitas más control del espaciado vertical) */
+    flex-direction: column; /* Organiza los hijos verticalmente */
+    justify-content: center; /* Centra el contenido verticalmente */
+    align-items: center; /* Centra el contenido horizontalmente */
     margin: 10px;
     width: 200px;
-    text-align: center; /* Asegura que el texto dentro se centre, útil para elementos de texto bloque */
 }
-.red1 h1 {
-    font-size: 14px; /* Ajusta el tamaño de fuente según sea necesario */
-    word-wrap: break-word; /* Asegura que el texto no se salga del contenedor */
-    background-color: #ddd;
-}
-
 
 .red1 img {
     max-width: 100%;
@@ -209,16 +203,20 @@ aside {
 
 }
 
+.red1 h1 {   
+    margin-top: 0; 
+    padding: 0;
+}
 .red2 {
-    border: 2px solid #1800f0;
-    padding: 50px;
+    border: 2px solid #000000;
+    padding: 10px;
     height: auto;
     border-radius: 50px;
-    background-color: #ff0000;
+    background-color: #9f0000;
     display: flex;
-    flex-direction: column; 
-    justify-content: center; 
-    align-items: center; 
+    flex-direction: column; /* Organiza los hijos verticalmente */
+    justify-content: center; /* Centra el contenido verticalmente */
+    align-items: center; /* Centra el contenido horizontalmente */
     margin: 10px;
     width: 200px;
 }
@@ -226,29 +224,26 @@ aside {
 .red2 img {
     max-width: 100%;
     height: auto;
-    margin-bottom: 0;
+    margin-bottom: 0; /* Minimiza el margen entre la imagen y el texto */
 
 }
 
-
-.red1 img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 0; /* Minimiza el margen entre la imagen y el texto */
-
+.red2 h1 {   
+    margin-top: 0; 
+    padding: 0;
 }
 
 
 .red3 {
     border: 2px solid #000000;
-    padding: 50px;
+    padding: 10px;
     height: auto;
     border-radius: 50px;
     background-color: #9f0000;
     display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    align-items: center; 
+    flex-direction: column; /* Organiza los hijos verticalmente */
+    justify-content: center; /* Centra el contenido verticalmente */
+    align-items: center; /* Centra el contenido horizontalmente */
     margin: 10px;
     width: 200px;
 }
@@ -256,12 +251,11 @@ aside {
 .red3 img {
     max-width: 100%;
     height: auto;
-    margin-bottom: 0; 
+    margin-bottom: 0; /* Minimiza el margen entre la imagen y el texto */
 
 }
 
-.texto h1 {   
+.red3 h1 {   
     margin-top: 0; 
     padding: 0;
-    word-wrap: break-word; 
 }
